[package]
name = "rust-raknet"
version = "0.13.0"
edition = "2021"
authors = ["b23r0 <b23r0@foxmail.com>"]
description = "RakNet Protocol implementation by Rust."
repository = "https://github.com/b23r0/rust-raknet"
documentation = "https://docs.rs/rust-raknet/latest/rust_raknet/"
readme = "README.md"
license = "MIT"
keywords = ["raknet", "networking" , "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
proxy-header = { version = "0.1.2" }
rand = { version = "0.9.1", features = ["std"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
